kubernetes-manifests/EKS-Deploy-Manifests/f-chatapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-frontend
  template:
    metadata:
      labels:
        app: chat-app-frontend
    spec:
      containers:
      - name: chat-app-frontend
        image: noscopev6/chatapp-b:9157a30548bc4852ecabcd4a97259628d6a6af69
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: chat-app-frontend-nodeport
spec:
  type: NodePort
  selector:
    app: chat-app-frontend
  ports:
    - port: 3000
      targetPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: chat-app-frontend-service
  namespace: production
  labels:
    app: chat-app
    tier: frontend
spec:
  selector:
    app: chat-app
    tier: frontend
  ports:
    - port: 80
      targetPort: 3000 # Assume frontend container is listening on port 3000
      protocol: TCP
  type: NodePort
