kubernetes-manifests/EKS-Deploy-Manifests/azure-ag-ingress.yaml
# deploy ingress namespace
apiVersion: v1
kind: Namespace
metadata:
  name: azure-ingress

---

# deploy ingress service 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: azure-ingress
  name: chatapp-ingress
  annotations:
    kubernetes.io/ingress.class: azure-application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"  # Enforce HTTPS for external access
spec:
  tls:
    - hosts:
        - chat.ahmadraza.in  # Replace with your frontend host domain
        - chatapi.ahmadraza.in   # Replace with your backend host domain
      secretName: chatapp-secret-tls  # Replace with your TLS secret name for HTTPS

  rules:
    - host: chat.ahmadraza.in  # Host for frontend application (HTTPS for public access)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-service  # Replace with your frontend service name
                port:
                  number: 80  # Internal communication over HTTP

    - host: chatapi.ahmadraza.in  # Host for backend service (HTTPS for public access)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend-service  # Replace with your backend service name
                port:
                  number: 80  # Internal communication over HTTP



## create and store the ssl certificate in secrets 
#kubectl create secret tls chatapp-secret-tls --cert=/path/to/your/cert.crt --key=/path/to/your/cert.key -n azure-ingress  # Ensure this matches your namespace
# kubectl get secret chatapp-secret-tls -n azure-ingress
